update custom_components/ via HACS

--- a/custom_components/bambu_lab/translations/ca.json
+++ b/custom_components/bambu_lab/translations/ca.json
@@ -585,6 +585,9 @@
       },
       "imagecamera": {
         "name": "Usar càmera amb sensor d'imatge"
+      },
+      "prompt_sound": {
+        "name": "Permet el so ràpid"
       }
     }
   },
