--- a/custom_components/bambu_lab/translations/de.json
+++ b/custom_components/bambu_lab/translations/de.json
@@ -585,6 +585,9 @@
       },
       "imagecamera": {
         "name": "Verwenden Sie eine Bildsensorkamera"
+      },
+      "prompt_sound": {
+        "name": "Aufforderungston zulassen"
       }
     }
   },
