--- a/custom_components/bambu_lab/translations/el.json
+++ b/custom_components/bambu_lab/translations/el.json
@@ -585,6 +585,9 @@
       },
       "imagecamera": {
         "name": "Χρησιμοποιήστε κάμερα αισθητήρα εικόνας"
+      },
+      "prompt_sound": {
+        "name": "Να επιτρέπεται ο ήχος προτροπής"
       }
     }
   },
