--- a/custom_components/bambu_lab/translations/en.json
+++ b/custom_components/bambu_lab/translations/en.json
@@ -585,6 +585,9 @@
       },
       "imagecamera": {
         "name": "Use image sensor camera"
+      },
+      "prompt_sound": {
+        "name": "Allow Prompt Sound"
       }
     }
   },
