--- a/custom_components/bambu_lab/translations/es.json
+++ b/custom_components/bambu_lab/translations/es.json
@@ -585,6 +585,9 @@
       },
       "imagecamera": {
         "name": "Usar cámara con sensor de imagen"
+      },
+      "prompt_sound": {
+        "name": "Permitir sonido rápido"
       }
     }
   },
@@ -592,7 +595,7 @@
     "configuration_type": {
       "options": {
         "bambu": "Nube de bambú",
-        "lan": "Conexión Local"
+        "lan": "Conexión local"
       }
     }
   }
