--- a/custom_components/bambu_lab/translations/fr.json
+++ b/custom_components/bambu_lab/translations/fr.json
@@ -585,6 +585,9 @@
       },
       "imagecamera": {
         "name": "Utiliser une caméra à capteur d'image"
+      },
+      "prompt_sound": {
+        "name": "Autoriser le son d'invite"
       }
     }
   },
