--- a/custom_components/bambu_lab/translations/ko.json
+++ b/custom_components/bambu_lab/translations/ko.json
@@ -585,6 +585,9 @@
       },
       "imagecamera": {
         "name": "이미지 센서 카메라 사용"
+      },
+      "prompt_sound": {
+        "name": "프롬프트 소리 허용"
       }
     }
   },
