--- a/custom_components/bambu_lab/translations/zh-Hans.json
+++ b/custom_components/bambu_lab/translations/zh-Hans.json
@@ -585,6 +585,9 @@
       },
       "imagecamera": {
         "name": "使用图像传感器相机"
+      },
+      "prompt_sound": {
+        "name": "允许提示音"
       }
     }
   },
