update custom_components/ via HACS

--- a/custom_components/bambu_lab/translations/ca.json
+++ b/custom_components/bambu_lab/translations/ca.json
@@ -593,6 +593,9 @@
       },
       "ftp": {
         "name": "Carregueu les dades del model de la impressora"
+      },
+      "timelapse": {
+        "name": "Carregueu el Timelapse més recent de la impressora"
       }
     }
   },
