--- a/custom_components/bambu_lab/translations/da.json
+++ b/custom_components/bambu_lab/translations/da.json
@@ -593,6 +593,9 @@
       },
       "ftp": {
         "name": "Indlæsningsmodeldata fra printer"
+      },
+      "timelapse": {
+        "name": "Indlæs den seneste tidslap fra printer"
       }
     }
   },
