--- a/custom_components/bambu_lab/translations/el.json
+++ b/custom_components/bambu_lab/translations/el.json
@@ -593,6 +593,9 @@
       },
       "ftp": {
         "name": "Φόρτωση δεδομένων μοντέλου από εκτυπωτή"
+      },
+      "timelapse": {
+        "name": "Φορτώστε το τελευταίο χρονοδιάγραμμα από τον εκτυπωτή"
       }
     }
   },
