--- a/custom_components/bambu_lab/translations/es.json
+++ b/custom_components/bambu_lab/translations/es.json
@@ -593,6 +593,9 @@
       },
       "ftp": {
         "name": "Cargar datos del modelo de la impresora"
+      },
+      "timelapse": {
+        "name": "Cargue el último timelapse de la impresora"
       }
     }
   },
