--- a/custom_components/bambu_lab/translations/ko.json
+++ b/custom_components/bambu_lab/translations/ko.json
@@ -593,6 +593,9 @@
       },
       "ftp": {
         "name": "프린터에서 모델 데이터를로드합니다"
+      },
+      "timelapse": {
+        "name": "프린터에서 최신 타임 랩스를로드하십시오"
       }
     }
   },
