--- a/custom_components/bambu_lab/translations/sk.json
+++ b/custom_components/bambu_lab/translations/sk.json
@@ -593,6 +593,9 @@
       },
       "ftp": {
         "name": "Načítať údaje o modeli z tlačiarne"
+      },
+      "timelapse": {
+        "name": "Načítať najnovší časový čas z tlačiarne"
       }
     }
   },
