--- a/custom_components/bambu_lab/translations/zh-Hans.json
+++ b/custom_components/bambu_lab/translations/zh-Hans.json
@@ -593,6 +593,9 @@
       },
       "ftp": {
         "name": "打印机加载模型数据"
+      },
+      "timelapse": {
+        "name": "从打印机加载最新的时间段"
       }
     }
   },
