--- a/custom_components/bambu_lab/translations/el.json
+++ b/custom_components/bambu_lab/translations/el.json
@@ -73,6 +73,15 @@
           "host": "Τοπική Διεύθυνση IP του Εκτυπωτή:",
           "access_code": "Κωδικός Πρόσβασης:",
           "usage_hours": "Ώρες Χρήσης (προαιρετικά):"
+        },
+        "sections": {
+          "advanced": {
+            "name": "Προχωρημένες επιλογές",
+            "description": "Αυτές οι επιλογές χρειάζονται μόνο εάν έχετε μια μη τυπική ρύθμιση.",
+            "data": {
+              "disable_ssl_verify": "Απενεργοποιήστε την επαλήθευση SSL"
+            }
+          }
         }
       }
     }
@@ -132,6 +141,15 @@
           "host": "Τοπική Διεύθυνση IP του Εκτυπωτή:",
           "access_code": "Κωδικός Πρόσβασης:",
           "usage_hours": "Ώρες Χρήσης (προαιρετικά):"
+        },
+        "sections": {
+          "advanced": {
+            "name": "Προχωρημένες επιλογές",
+            "description": "Αυτές οι επιλογές χρειάζονται μόνο εάν έχετε μια μη τυπική ρύθμιση.",
+            "data": {
+              "disable_ssl_verify": "Απενεργοποιήστε την επαλήθευση SSL"
+            }
+          }
         }
       }
     }
