--- a/custom_components/bambu_lab/translations/th.json
+++ b/custom_components/bambu_lab/translations/th.json
@@ -73,6 +73,15 @@
           "host": "ที่อยู่ IP เครื่องพิมพ์ท้องถิ่น:",
           "access_code": "รหัสการเข้าถึง:",
           "usage_hours": "ชั่วโมงการใช้งานปัจจุบัน (ไม่บังคับ):"
+        },
+        "sections": {
+          "advanced": {
+            "name": "ตัวเลือกขั้นสูง",
+            "description": "ตัวเลือกเหล่านี้จำเป็นก็ต่อเมื่อคุณมีการตั้งค่าที่ไม่ได้มาตรฐาน",
+            "data": {
+              "disable_ssl_verify": "ปิดใช้งานการตรวจสอบ SSL"
+            }
+          }
         }
       }
     }
@@ -132,6 +141,15 @@
           "host": "ที่อยู่ IP เครื่องพิมพ์ท้องถิ่น:",
           "access_code": "รหัสการเข้าถึง:",
           "usage_hours": "ชั่วโมงการใช้งานปัจจุบัน (ไม่บังคับ):"
+        },
+        "sections": {
+          "advanced": {
+            "name": "ตัวเลือกขั้นสูง",
+            "description": "ตัวเลือกเหล่านี้จำเป็นก็ต่อเมื่อคุณมีการตั้งค่าที่ไม่ได้มาตรฐาน",
+            "data": {
+              "disable_ssl_verify": "ปิดใช้งานการตรวจสอบ SSL"
+            }
+          }
         }
       }
     }
