--- a/custom_components/bambu_lab/translations/zh-Hans.json
+++ b/custom_components/bambu_lab/translations/zh-Hans.json
@@ -73,6 +73,15 @@
           "host": "本地打印机 IP 地址：",
           "access_code": "访问码",
           "usage_hours": "当前使用时间（可选）："
+        },
+        "sections": {
+          "advanced": {
+            "name": "高级选项",
+            "description": "仅当您具有非标准设置时，才需要这些选项。",
+            "data": {
+              "disable_ssl_verify": "禁用SSL验证"
+            }
+          }
         }
       }
     }
@@ -132,6 +141,15 @@
           "host": "本地打印机 IP 地址：",
           "access_code": "访问码",
           "usage_hours": "当前使用时间（可选）："
+        },
+        "sections": {
+          "advanced": {
+            "name": "高级选项",
+            "description": "仅当您具有非标准设置时，才需要这些选项。",
+            "data": {
+              "disable_ssl_verify": "禁用SSL验证"
+            }
+          }
         }
       }
     }
