update custom_components/ via HACS

--- a/custom_components/bambu_lab/translations/ko.json
+++ b/custom_components/bambu_lab/translations/ko.json
@@ -16,7 +16,7 @@
       "already_configured": "장치가 이미 구성되어 있습니다",
       "no_printers": "계정에서 구성되지 않은 프린터를 찾을 수 없습니다.",
       "cloudflare": "Cloudflare가 연결 시도를 차단했습니다.",
-      "curl_unavailable": "컬_cffi 라이브러리를 사용할 수 없습니다."
+      "curl_unavailable": "curl_cffi 라이브러리를 사용할 수 없습니다."
     },
     "error": {
       "cannot_connect": "연결에 실패했습니다. 자격 증명을 확인하세요.",
@@ -63,6 +63,16 @@
           "host": "로컬 프린터 IP 주소:",
           "access_code": "접근 코드:",
           "usage_hours": "현재 사용 시간 (선택 사항):"
+        },
+        "sections": {
+          "advanced": {
+            "name": "고급 옵션",
+            "description": "이 옵션은 비표준 설정이있는 경우에만 필요합니다.",
+            "data": {
+              "disable_ssl_verify": "SSL 확인을 비활성화합니다",
+              "enable_firmware_update": "펌웨어 업데이트 지원을 활성화합니다"
+            }
+          }
         }
       },
       "Lan": {
@@ -79,7 +89,8 @@
             "name": "고급 옵션",
             "description": "이 옵션은 비표준 설정이있는 경우에만 필요합니다.",
             "data": {
-              "disable_ssl_verify": "SSL 확인을 비활성화합니다"
+              "disable_ssl_verify": "SSL 확인을 비활성화합니다",
+              "enable_firmware_update": "펌웨어 업데이트 지원을 활성화합니다"
             }
           }
         }
@@ -89,7 +100,7 @@
   "options": {
     "abort": {
       "cloudflare": "Cloudflare가 연결 시도를 차단했습니다.",
-      "curl_unavailable": "컬_cffi 라이브러리를 사용할 수 없습니다."
+      "curl_unavailable": "curl_cffi 라이브러리를 사용할 수 없습니다."
     },
     "error": {
       "cannot_connect": "연결에 실패했습니다.",
@@ -132,6 +143,16 @@
           "access_code": "접근 코드:",
           "local_mqtt": "Bambu Lab 클라우드 대신 프린터에 직접 연결:",
           "usage_hours": "현재 사용 시간 (선택 사항):"
+        },
+        "sections": {
+          "advanced": {
+            "name": "고급 옵션",
+            "description": "이러한 고급 옵션은 초기 또는 위험한 기능입니다. 문서를 읽고 자신의 위험에 따라 사용하십시오.",
+            "data": {
+              "disable_ssl_verify": "SSL 확인을 비활성화합니다",
+              "enable_firmware_update": "펌웨어 업데이트 지원을 활성화합니다"
+            }
+          }
         }
       },
       "Lan": {
@@ -145,9 +166,10 @@
         "sections": {
           "advanced": {
             "name": "고급 옵션",
-            "description": "이 옵션은 비표준 설정이있는 경우에만 필요합니다.",
+            "description": "이러한 고급 옵션은 초기 또는 위험한 기능입니다. 문서를 읽고 자신의 위험에 따라 사용하십시오.",
             "data": {
-              "disable_ssl_verify": "SSL 확인을 비활성화합니다"
+              "disable_ssl_verify": "SSL 확인을 비활성화합니다",
+              "enable_firmware_update": "펌웨어 업데이트 지원을 활성화합니다"
             }
           }
         }
@@ -352,7 +374,7 @@
         "name": "MQTT 연결 모드",
         "state": {
           "local": "로컬",
-          "bambu_cloud": "밤부랩 클라우드"
+          "bambu_cloud": "뱀부랩 클라우드"
         }
       },
       "gcode_file": {
@@ -485,6 +507,9 @@
           },
           "type": {
             "name": "유형"
+          },
+          "remain_enabled": {
+            "name": "나머지 필라멘트 추정이 활성화되었습니다"
           }
         }
       },
@@ -622,17 +647,22 @@
         "name": "프롬프트 소리 허용"
       },
       "ftp": {
-        "name": "프린터에서 모델 데이터를로드합니다"
+        "name": "프린터에서 모델 데이터 로드"
       },
       "timelapse": {
-        "name": "프린터에서 최신 타임 랩스를로드하십시오"
+        "name": "프린터에서 최신 타임랩스 로드"
+      }
+    },
+    "update": {
+      "firmware_update": {
+        "name": "펌웨어 업데이트"
       }
     }
   },
   "selector": {
     "configuration_type": {
       "options": {
-        "bambu": "밤부랩 클라우드",
+        "bambu": "뱀부랩 클라우드",
         "lan": "랜 모드"
       }
     }
