--- a/custom_components/bambu_lab/translations/fr.json
+++ b/custom_components/bambu_lab/translations/fr.json
@@ -63,6 +63,16 @@
           "host": "Adresse IP de l’imprimante locale :",
           "access_code": "Code d'accès",
           "usage_hours": "Heures d'utilisation actuelles (facultatif) :"
+        },
+        "sections": {
+          "advanced": {
+            "name": "Options avancées",
+            "description": "Ces options ne sont nécessaires que si vous avez une configuration non standard.",
+            "data": {
+              "disable_ssl_verify": "Désactiver la vérification SSL",
+              "enable_firmware_update": "Activer la prise en charge de la mise à jour du micrologiciel"
+            }
+          }
         }
       },
       "Lan": {
@@ -79,7 +89,8 @@
             "name": "Options avancées",
             "description": "Ces options ne sont nécessaires que si vous avez une configuration non standard.",
             "data": {
-              "disable_ssl_verify": "Désactiver la vérification SSL"
+              "disable_ssl_verify": "Désactiver la vérification SSL",
+              "enable_firmware_update": "Activer la prise en charge de la mise à jour du micrologiciel"
             }
           }
         }
@@ -132,6 +143,16 @@
           "access_code": "Code d'accès :",
           "local_mqtt": "Connectez-vous directement à l'imprimante plutôt que via le cloud Bambu Lab :",
           "usage_hours": "Heures d'utilisation actuelles (facultatif) :"
+        },
+        "sections": {
+          "advanced": {
+            "name": "Options avancées",
+            "description": "Ces options avancées sont des fonctionnalités précoces ou risquées. Lisez la documentation et utilisez-les à vos propres risques.",
+            "data": {
+              "disable_ssl_verify": "Désactiver la vérification SSL",
+              "enable_firmware_update": "Activer la prise en charge de la mise à jour du micrologiciel"
+            }
+          }
         }
       },
       "Lan": {
@@ -145,9 +166,10 @@
         "sections": {
           "advanced": {
             "name": "Options avancées",
-            "description": "Ces options ne sont nécessaires que si vous avez une configuration non standard.",
+            "description": "Ces options avancées sont des fonctionnalités précoces ou risquées. Lisez la documentation et utilisez-les à vos propres risques.",
             "data": {
-              "disable_ssl_verify": "Désactiver la vérification SSL"
+              "disable_ssl_verify": "Désactiver la vérification SSL",
+              "enable_firmware_update": "Activer la prise en charge de la mise à jour du micrologiciel"
             }
           }
         }
@@ -485,6 +507,9 @@
           },
           "type": {
             "name": "Type"
+          },
+          "remain_enabled": {
+            "name": "Estimation du filament restant activée"
           }
         }
       },
@@ -626,6 +651,11 @@
       },
       "timelapse": {
         "name": "Chargez le dernier timelapse de l'imprimante"
+      }
+    },
+    "update": {
+      "firmware_update": {
+        "name": "Mise à jour du micrologiciel"
       }
     }
   },
